[package]
name = "hashing-copy"
version = "0.1.1"
authors = ["Richo Healey <richo@stripe.com>"]
license = "MIT"
description = """Copies from a Read to a Write, hashing the content with a Digest
along the way. Allowing you to hash large files while copying them to avoid
having to read them out again"""
repository = "https://github.com/richo/hashing-copy"

[dependencies]
digest = "0.7"

[dev-dependencies]
sha2 = "0.7"
hex-literal= "0.1"
