[package]
name = "hashing-copy"
version = "0.2.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
license = "MIT"
description = """Copies from a Read to a Write, hashing the content with a Digest
along the way. Allowing you to hash large files while copying them to avoid
having to read them out again"""
repository = "https://github.com/richo/hashing-copy"

[dependencies]
digest = "0.7"

[dev-dependencies]
sha2 = "0.7"
hex-literal= "0.1"
